--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,7 @@
 <head>
+  {% if page.use_math %}
+  {% include mathjax_support.html %}
+  {% endif %}
   <link href="https://gmpg.org/xfn/11" rel="profile" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
